objects/OrgWideSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to keep settings used by Apex routines</description>
    <fields>
        <fullName>Datatable_Page_Size__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Number of rows to display per page on a datatable.</description>
        <label>Datatable Page Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enable_Error_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, thrown errors will be stored in the Salesforce error logging object.</inlineHelpText>
        <label>Enable Error Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Environment field used by Apex code to determine which salesforce environment is currently being run:  PROD, QA, DEV</description>
        <inlineHelpText>Environment field used by Apex code to determine which salesforce environment is currently being run:  PROD, QA, DEV</inlineHelpText>
        <label>Environment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Email_Recipients__c</fullName>
        <description>Email addresses to be used when Exception logging is enabled.</description>
        <inlineHelpText>Email addresses to be used when Exception logging is enabled.</inlineHelpText>
        <label>Error Email Recipients</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login_N_Days_To_Freeze_Users__c</fullName>
        <description>Last Login N Days To Freeze Users</description>
        <label>Last Login N Days To Freeze Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Result_Limit__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Value to limit number of rows returned by a search</description>
        <label>Search Result Limit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Exception_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, exception emails will be generated</description>
        <label>Send Exception Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rtsInterfaceObjectPrefix__c</fullName>
        <description>The Salesforc object prefix for the custom object created to house Request Tracking System Interface records</description>
        <label>RTS Interface Object Prefix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rtsUrl__c</fullName>
        <description>URL for the Request Tracking System address to access.</description>
        <label>Request Tracking System URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Org Wide Settings</label>
</CustomObject>